#2562 - Fixed video duration spacing issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
@@ -47,7 +47,7 @@
 
 	.bb-video-duration {
 		font-size: 13px;
-		margin: 0;
+		margin: 0 !important;
 		background-color: #000;
 		color: #fff;
 		display: inline-block;
